--- a/rxfireauth/build.gradle
+++ b/rxfireauth/build.gradle
@@ -36,4 +36,5 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
     implementation 'io.reactivex.rxjava3:rxkotlin:3.0.0'
+    implementation 'com.auth0.android:jwtdecode:2.0.0'
 }
