--- a/rxfireauth/build.gradle
+++ b/rxfireauth/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx:19.3.1'
     implementation 'io.reactivex.rxjava3:rxkotlin:3.0.0'
     implementation 'com.auth0.android:jwtdecode:2.0.0'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
 }
