--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,19 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+# Set up your maven coordinates here, artifactId is defined per project.
+version = 1.0.0
+group = io.github.mrasterisco
+
+# Put link to your OSS repository. Bintray requires this to be filled for free OpenSource tiers.
+vcs=https://github.com/MrAsterisco/RxFireAuth-Android
+
+# Put your Bintray organization name here, e.g. your bintray username.
+bintrayOrg=mrasterisco
+
+# Put your Bintray repository name here, e.g. maven.
+bintrayRepository=RxFireAuth
+
+# Put name of your package here.
+bintrayPackage=rxfireauth
